--- a/projects/hk_kcare/package.json
+++ b/projects/hk_kcare/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hk_kcare",
+  "description": "A Healthcare app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,7 @@
     "web-vitals": "^2.1.4"
   },
   "main": "public/electron.js",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -36,20 +38,31 @@
           }
         },
         {
+          "name": "@electron-forge/maker-deb",
+          "config": {
+            "name": "hk_kcare"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {
+            "name": "hk_kcare"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-dmg",
+          "config": {
+            "name": "hk_kcare",
+            "format": "ULFO"
+          }
+        },
+        {
           "name": "@electron-forge/maker-zip",
           "platforms": [
             "darwin",
             "linux",
             "win32"
           ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
         }
       ]
     }
@@ -76,6 +89,7 @@
     "concurrently": "^8.2.0",
     "electron": "^25.1.0",
     "electron-is-dev": "^2.0.0",
+    "electron-prebuilt-compile": "8.2.0",
     "wait-on": "^7.0.1"
   }
 }
