--- a/.github/workflows/manual_build_windows.yml
+++ b/.github/workflows/manual_build_windows.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Install node modules
       run: npm ci --verbose
       
-    - run: npm run build
+    - run: CI=false npm run build
