--- a/.github/workflows/manual_build_windows.yml
+++ b/.github/workflows/manual_build_windows.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Install node modules
       run: npm ci --verbose
       
-    - run: npm run build
+    - run: npm run make-win32
