--- a/.github/workflows/manual_build_windows.yml
+++ b/.github/workflows/manual_build_windows.yml
@@ -42,4 +42,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: hk_kcare_app
-        path: "./projects/hk_kcare/out/hk_kcare.zip"
+        path: './projects/hk_kcare/out/hk_kcare.zip'
