--- a/.github/workflows/manual_build_windows.yml
+++ b/.github/workflows/manual_build_windows.yml
@@ -30,7 +30,7 @@ jobs:
       
     - run: npm run make-win32
     
-    - run: Compress-Archive -Path './projects/hk_kcare/out/hk_kcare-win32-x64/*' -Destination './projects/hk_kcare/out/hk_kcare.zip'
+    - run: Compress-Archive -Path 'C:/Users/RUNNER~1/AppData/Local/Temp/electron-packager/win32-x64/hk_kcare-win32-x64/*' -Destination './projects/hk_kcare/out/hk_kcare.zip'
    
     - name: Commit and push
       uses: EndBug/add-and-commit@v7
