--- a/.github/workflows/manual_build_windows.yml
+++ b/.github/workflows/manual_build_windows.yml
@@ -32,12 +32,12 @@ jobs:
     
     - run: Compress-Archive -Path 'D:/a/EverythingUnderTheSun/EverythingUnderTheSun/projects/hk_kcare/out/hk_kcare-win32-x64/*' -Destination 'D:/a/EverythingUnderTheSun/EverythingUnderTheSun/projects/hk_kcare/hk_kcare.zip'
    
-    - name: Commit and push
-      uses: EndBug/add-and-commit@v7
-      with:
-        add: '["D:/a/EverythingUnderTheSun/EverythingUnderTheSun/projects/hk_kcare/hk_kcare.zip"]'
-        message: 'Manual build for Run ${{ github.run_id }}'
-        push: true
+    #- name: Commit and push
+    #  uses: EndBug/add-and-commit@v7
+    #  with:
+    #    add: '["D:/a/EverythingUnderTheSun/EverythingUnderTheSun/projects/hk_kcare/hk_kcare.zip"]'
+    #    message: 'Manual build for Run ${{ github.run_id }}'
+    #    push: true
         
     - uses: actions/upload-artifact@v3
       with:
