--- a/projects/hk_kcare/package.json
+++ b/projects/hk_kcare/package.json
@@ -19,7 +19,7 @@
     "concurrently": "^8.2.0",
     "electron": "^25.1.0",
     "electron-is-dev": "^2.0.0",
-    "electron-prebuilt-compile": "8.2.0",
+    "electron-compile": "8.2.0",
     "react-router-dom": "^6.12.1",
     "wait-on": "^7.0.1"
   },
@@ -97,6 +97,11 @@
     ]
   },
   "devDependencies": {
-
+"concurrently": "^8.2.0",
+    "electron": "^25.1.0",
+    "electron-is-dev": "^2.0.0",
+    "electron-prebuilt-compile": "8.2.0",
+    "react-router-dom": "^6.12.1",
+    "wait-on": "^7.0.1"
   }
 }
