--- a/projects/hk_kcare/package.json
+++ b/projects/hk_kcare/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "A Healthcare app",
   "author": "Anantharaj",
+  "license" : "ISC",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
