--- a/.github/workflows/hk_kcare_build_linux.yml
+++ b/.github/workflows/hk_kcare_build_linux.yml
@@ -42,4 +42,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: hk_kcare_linux
-        path: './projects/hk_kcare/out/hk_kcare-linux/*'
+        path: '/home/runner/work/EverythingUnderTheSun/EverythingUnderTheSun/projects/hk_kcare/out/hk_kcare-linux/*'
