--- a/projects/hk_kcare/package.json
+++ b/projects/hk_kcare/package.json
@@ -10,19 +10,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
+    "concurrently": "^8.2.0",
+    "electron": "^25.1.0",
+    "electron-compile": "6.4.4",
     "electron-forge": "^5.2.4",
+    "electron-is-dev": "^2.0.0",
+    "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
-    "web-vitals": "^2.1.4",
-    "concurrently": "^8.2.0",
-    "electron": "^25.1.0",
-    "electron-is-dev": "^2.0.0",
-    "electron-compile": "6.4.4",
-    "react-router-dom": "^6.12.1",
-    "wait-on": "^7.0.1"
+    "wait-on": "^7.0.1",
+    "web-vitals": "^2.1.4"
   },
   "main": "public/electron.js",
   "homepage": "./",
