--- a/projects/hk_kcare/package.json
+++ b/projects/hk_kcare/package.json
@@ -10,11 +10,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
-    "concurrently": "^8.2.0",
-    "electron": "^25.1.0",
-    "electron-compile": "6.4.4",
-    "electron-forge": "^5.2.4",
-    "electron-is-dev": "^2.0.0",
     "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
@@ -22,63 +17,13 @@
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "sass": "^1.63.6",
-    "wait-on": "^7.0.1",
     "web-vitals": "^2.1.4"
   },
-  "main": "public/electron.js",
-  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
-    "electron": "wait-on tcp:3000 && electron .",
-    "package": "react-scripts build && electron-forge package",
-    "make-mac": "react-scripts build && electron-forge make --platform darwin",
-    "make-linux": "react-scripts build && electron-forge make --platform linux",
-    "make-win32": "react-scripts build && electron-forge make --platform win32",
-    "make": "react-scripts build && electron-forge make"
-  },
-  "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "hk_kcare"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {
-            "name": "hk_kcare"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {
-            "name": "hk_kcare"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-dmg",
-          "config": {
-            "name": "hk_kcare",
-            "format": "ULFO"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin",
-            "linux",
-            "win32"
-          ]
-        }
-      ]
-    }
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -97,12 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.0",
-    "electron": "^25.1.0",
-    "electron-is-dev": "^2.0.0",
-    "electron-prebuilt-compile": "8.2.0",
-    "wait-on": "^7.0.1"
   }
 }
