--- a/projects/hk_kcare/package.json
+++ b/projects/hk_kcare/package.json
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "stop": "npx kill-port 3000",
+    "restart": "npx kill-port 3000 && react-scripts start"
   },
   "eslintConfig": {
     "extends": [
