--- a/projects/hk_kcare/package.json
+++ b/projects/hk_kcare/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hk_kcare",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A Healthcare app",
   "author": "Anantharaj",
   "license": "ISC",
@@ -12,7 +12,6 @@
     "bootstrap": "^5.3.0",
     "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
-    "npx": "^10.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
@@ -26,7 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "stop": "npx kill-port 3000",
-    "restart": "npx kill-port 3000 && react-scripts start"
+    "restart": "npx kill-port 3000 && react-scripts start",
+    "startprod": "serve -s build"
   },
   "eslintConfig": {
     "extends": [
