--- a/projects/hk_kcare/package.json
+++ b/projects/hk_kcare/package.json
@@ -11,10 +11,12 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@mui/x-date-pickers": "^7.22.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
+    "dayjs": "^1.11.10",
     "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
     "mongoose": "^8.7.0",
